# once_vec

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: comparison.rs
src/: lib.rs
